	- Add various cleanups. (DLR)
- help.c:
  do_help()
	- Simplify screen update handling and exiting. (DLR)
- move.c:
  do_scroll_up(), do_scroll_down()
	- Fix problems where, after scrolling, the previous and current
	  lines would not be updated properly if the current line was
	  not the first or last line of the edit window. (DLR, found by
	  Mike Frysinger)
- winio.c:
  display_string()
	- Properly handle buf[start_index]'s being a null terminator.
	  (DLR)
  titlebar()
	- Don't display overly long filenames with ellipses if the
	  number of columns is extremely small. (DLR)
	- Don't display any blank space for the state if we're in the
	  file browser, as Pico doesn't. (DLR)
- doc/syntax/c.nanorc:
	- Since .i and .ii are preprocessed C and C++ output, colorize
	  them here. (Mike Frysinger)
- doc/syntax/ruby.nanorc:
	- Add missing blank line after the first comment, for
	  consistency. (DLR)
	- Improve highlighting of constants. (John M. Gabriele, minor
	  tweaks by DLR)

GNU nano 1.3.12 - 2006.06.26
- General:
	- Miscellaneous comment fixes. (DLR)
	- Implement filename searches in the file browser.  New
	  functions filesearch_init(), findnextfile(),
	  findnextfile_wrap_reset(), filesearch_abort(),
	  do_filesearch(), do_fileresearch(), do_first_file(),
	  do_last_file(), do_help_void(), and do_browser_help(); changes
	  to do_browser(), parse_browser_input(), shortcut_init(),
	  do_help(), and help_init(). (DLR)
	- Open all files in binary mode for consistency and robustness.
	  Changes to load_history() and do_rcfile(). (DLR)
	- Change translator-specific comments in global.c and prompt.c
	  so that they show up in nano.pot, and make them all
	  consistent. (Benno Schulenberg and DLR)
	- Reduce USE_UTF8 to a static bool in chars.c, allow nano.c to
	  set it via a function, and allow winio.c to read its value
	  when needed.  New functions utf8_init() and using_utf8();
	  changes to is_alnum_mbchar(), is_blank_mbchar(),